--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
             "value": "c95ef1d4-f3ac-4586-96e9-234a37dda068"        
         },
         "PROTOCOL": {
-            "description": "v2ray protocol, 'vmess' or 'vless'",
+            "description": "v2ray protocol, vmess or vless",
             "value": "vmess"
         }
     },
