--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
             "value": "vmess"
         }
     },
-    "website": "https://starts.sh",
+    "website": "https://111111.online",
     "repository": "https://github.com/yeahwu/kinto",
     "stack": "container"
 }
